# tpae

./: .gitignore  README.md  pyproject.toml
data/: test_sites.geojson
notebooks/: DIST_ALERT.ipynb  absolute_effectiveness.ipynb  ps_model.ipynb  run_absolute_effectiveness.ipynb
src/: absolute_effectiveness.ipynb  absolute_effectiveness_functions.py
src/absolute_effectiveness/: data_processor.py  habitat_condition.py  habitat_loss.py  site_selector.py  visualization.py
src/psm/: get_interior_cells.py  global_grid_creation.py  ps_grid_creation.py
src/tpae/: absolute_effectiveness_functions.py
src/tpae/utils/: variables.py
src/utils/: variables.py
tpae/: absolute_effectiveness.ipynb  test_nb.ipynb
utils/: variables.py
