[project]
name = "tpae"
version = "0.1.0"
description = "Terrestrial Protected Area Effectiveness"
authors = [
    {name = "SkyTruth"}
]
license = {text = "Apache License, Version 2.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "earthengine-api>=1.7.4"
]

[tool.poetry]
package-mode = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
